--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,35 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+# PostgreSQL version 9.2.1
+#   gem pg
+
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: reddit_on_rails
+  username: example1
+  password: example1
   pool: 5
+  host: localhost
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: reddit_on_rails
+  username: example1
+  password: example1
   pool: 5
+  host: localhost
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: reddit_on_rails
+  username: example1
+  password: example1
   pool: 5
+  host: localhost
   timeout: 5000
